--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="presentation">
         <article>
             <div class="img">
-                <img src="IMG/300.png" alt="">
+                <img src="IMG/300.png" alt="Foto de perfil">
             </div>
             
         </article>
@@ -71,28 +71,28 @@
 
        <div class="container-box-works">
         <div class="box-work">
-            <img src="img/150.png" alt="">
+            <img src="img/150.png" alt="Trabalhos">
         </div>
         <div class="box-work">
-            <img src="img/150.png" alt="">
+            <img src="img/150.png" alt="Trabalhos">
         </div>
         <div class="box-work">
-            <img src="img/150.png" alt="">
+            <img src="img/150.png" alt="Trabalhos">
         </div>
         <div class="box-work">
-            <img src="img/150.png" alt="">
+            <img src="img/150.png" alt="Trabalhos">
         </div>
         <div class="box-work">
-            <img src="img/150.png" alt="">
+            <img src="img/150.png" alt="Trabalhos">
         </div>
         <div class="box-work">
-            <img src="img/150.png" alt="">
+            <img src="img/150.png" alt="Trabalhos">
         </div>
         <div class="box-work">
-            <img src="img/150.png" alt="">
+            <img src="img/150.png" alt="Trabalhos">
         </div>
         <div class="box-work">
-            <img src="img/150.png" alt="">
+            <img src="img/150.png" alt="Trabalhos">
         </div>
 
        </div>
